--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts"
+    "start": "ts-node src/server.ts",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
@@ -25,7 +26,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "faker": "^6.6.6",
     "joi": "^17.12.3"
   }
 }
