--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "faker": "^6.6.6",
     "joi": "^17.12.3"
   }
