--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "faker": "^6.6.6",
-    "joi": "^17.12.3"
+    "joi": "^17.12.3",
+    "uuid": "^9.0.1"
   }
 }
