--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-async-errors": "^3.1.1",
     "faker": "^6.6.6",
     "joi": "^17.12.3",
+    "local-storage": "^2.0.0",
     "uuid": "^9.0.1"
   }
 }
